# gd-opt

./: CMakeLists.txt  README.md  demo.ipynb  main.cpp
binding/: pyoptimizer.cpp
include/: gradient_descent_optimizer.h  optimizer.h
src/: gradient_descent_optimizer.cpp
template/: gradient_descent_optimizer_t.h  main_t.cpp  optimizer_t.h
